added a second header and a paragraph

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <h2>Every Day We Have The Chance To Better Ourselves</h2>
+        <p>We can take small steps, and continue to push through resistance to get what we want</p>
     </body>
 </html>
