added more text with bold and italics

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,5 +8,7 @@
         <h1>Hello World!</h1>
         <h2>Every Day We Have The Chance To Better Ourselves</h2>
         <p>We can take small steps, and continue to push through resistance to get what we want</p>
+        <p>we can get <strong>better</strong> every day that we try</p>
+        <p>Sometimes we just need to <em>do the things we know we need to do</em> until we get it right!</p>
     </body>
 </html>
