added an unordered list and an ordered list

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -10,5 +10,14 @@
         <p>We can take small steps, and continue to push through resistance to get what we want</p>
         <p>we can get <strong>better</strong> every day that we try</p>
         <p>Sometimes we just need to <em>do the things we know we need to do</em> until we get it right!</p>
+        <ul>
+            <li>something to start off with</li>
+            <li>something else to follow it up with in no particular order</li>
+        </ul>
+        <p>something a bit more exciting than Lorem Ipsum</p>
+        <ol>
+            <li>this is a defined start</li>
+            <li>and this is something that purposefully follows it!</li>
+        </ol>
     </body>
 </html>
