--- a/odin-link-and-images/index.html
+++ b/odin-link-and-images/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <a>click me</a>
+        <p>if anyone ever reads this it's just because....</p>
+        <p>i.... feel the need to make it look like my github repo has an update - because I hit a minor stumbling block and didn't have enough time to figure it out...</p>
     </body>
 </html>
