--- a/odin-link-and-images/index.html
+++ b/odin-link-and-images/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-< lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <h1>Homepage</h1>
+        
     </head>
 
     <body>
+        <h1>Homepage</h1>
         <a href="https://www.theodinproject.com/about">click me</a>
-        <p>if anyone ever reads this it's just because....</p>
-        <p>i.... feel the need to make it look like my github repo has an update - because I hit a minor stumbling block and didn't have enough time 
-            to figure it out...</p>
-        <p>after a completely trivial amount of effort I figured it out. everything is amazing and progress can always be made</p>
+        <a href="pages/about.html">About</a>
+        <img src="images/dog.jpg">
+        <p>Seek Glory</p>
     </body>
 </html>
