--- a/odin-link-and-images/index.html
+++ b/odin-link-and-images/index.html
@@ -9,7 +9,7 @@
         <h1>Homepage</h1>
         <a href="https://www.theodinproject.com/about">click me</a>
         <a href="pages/about.html">About</a>
-        <img src="images/dog.jpg">
+        <img src="images/dog.jpg" alt="pug picture">
         <p>Seek Glory</p>
     </body>
 </html>
